--- a/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
+++ b/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
@@ -30,8 +30,8 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.10" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.10" />
-	  <PackageReference Include="SecurityService.Client" Version="2025.8.1" />
-	  <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2025.8.1" />
+	  <PackageReference Include="SecurityService.Client" Version="2025.10.1" />
+	  <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2025.10.1" />
 	  <PackageReference Include="Shouldly" Version="4.3.0" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
 	  <PackageReference Include="Reqnroll.Tools.MsBuild.Generation" Version="3.2.0" />
@@ -39,17 +39,17 @@
     <PackageReference Include="NUnit3TestAdapter" Version="5.2.0" />
     <PackageReference Include="Reqnroll" Version="3.2.0" />
     <PackageReference Include="Reqnroll.NUnit" Version="3.2.0" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="2025.10.2" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="2025.11.11" />
 	  <PackageReference Include="Selenium.Support" Version="4.38.0" />
 	  <PackageReference Include="Selenium.WebDriver" Version="4.38.0" />
 
-	  <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2025.8.1" />
+	  <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2025.10.2-build106" />
 
-	  <PackageReference Include="TransactionProcessor.Client" Version="2025.9.1" />
+	  <PackageReference Include="TransactionProcessor.Client" Version="2025.10.2-build261" />
 
-	  <PackageReference Include="TransactionProcessor.Database" Version="2025.9.1" />
+	  <PackageReference Include="TransactionProcessor.Database" Version="2025.10.2-build261" />
 
-	  <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2025.9.1" />
+	  <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2025.10.2-build261" />
   </ItemGroup>
 
   <ItemGroup>
