--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -5,7 +5,7 @@ on:
     types: [published]
 
 jobs:
-  buildlinux:
+  build:
     name: "Release"
     env:
         ASPNETCORE_ENVIRONMENT: "Production"
@@ -14,11 +14,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2.3.4
-
-    - name: Install NET 9
-      uses: actions/setup-dotnet@v4.0.1
-      with:
-        dotnet-version: '9.0.x'    
 
     - name: Get the version
       id: get_version
@@ -51,7 +46,7 @@ jobs:
     
     - name: Publish UI
       if: ${{ github.event.release.prerelease == false }} 
-      run: dotnet publish "EstateManagementUI\EstateManagementUI.csproj" --configuration Release --output publishOutput -r linux-x64 --self-contained             
+      run: dotnet publish "EstateManagementUI\EstateManagementUI.csproj" --configuration Release --output publishOutput -r win-x64 --self-contained             
 
     - name: Build Release Package
       run: |
@@ -65,8 +60,8 @@ jobs:
         path: estatemanagementui.zip    
         
   deploystaging:
-    runs-on: [stagingserver,linux]
-    needs: buildlinux
+    runs-on: [stagingserver,windows]
+    needs: build
     environment: staging
     name: "Deploy to Staging"
     
@@ -75,77 +70,31 @@ jobs:
         uses: actions/download-artifact@v4.1.8
         with:
           name: estatemanagementui
-          path: /tmp/estatemanagementui # Download to a temporary directory
   
-      - name: Remove existing service (if applicable)
+      - name: Remove existing  Windows service
         run: |
-          SERVICE_NAME="estatemanagementui"
-          if systemctl is-active --quiet "$SERVICE_NAME"; then
-            echo "Stopping existing service..."
-            sudo systemctl stop "$SERVICE_NAME"
-          fi
-          if systemctl is-enabled --quiet "$SERVICE_NAME"; then
-            echo "Disabling existing service..."
-            sudo systemctl disable "$SERVICE_NAME"
-          fi
-          if [ -f "/etc/systemd/system/${SERVICE_NAME}.service" ]; then
-            echo "Removing existing service unit file..."
-            sudo rm "/etc/systemd/system/${SERVICE_NAME}.service"
-            sudo systemctl daemon-reload
-          fi
-  
+          $serviceName = "Transaction Processing - Estate Management UI"
+          # Check if the service exists
+          if (Get-Service -Name $serviceName -ErrorAction SilentlyContinue) {
+            Stop-Service -Name $serviceName
+            sc.exe delete $serviceName
+          }
+
       - name: Unzip the files
         run: |
-          sudo mkdir -p /opt/txnproc/transactionprocessing/estatemanagementui
-          sudo unzip -o /tmp/estatemanagementui/estatemanagementui.zip -d /opt/txnproc/transactionprocessing/estatemanagementui
-  
-      # IMPORTANT: Add a step to ensure the .NET runtime is installed on the server
-      # This assumes it's not already there. If your base image already has it, you can skip this.
-      - name: Install .NET Runtime
+          Expand-Archive -Path estatemanagementui.zip -DestinationPath "C:\txnproc\transactionprocessing\estatemanagementui" -Force
+      
+      - name: Install as a Windows service
         run: |
-          # Example for Ubuntu. Adjust based on your .NET version (e.g., 8.0, 7.0)
-          # and if you need the SDK or just the runtime.
-          # This uses Microsoft's package repository for the latest versions.
-          wget https://packages.microsoft.com/config/ubuntu/$(lsb_release -rs)/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
-          sudo dpkg -i packages-microsoft-prod.deb
-          rm packages-microsoft-prod.deb
-          sudo apt update
-          sudo apt install -y aspnetcore-runtime-9.0
-  
-      - name: Install and Start as a Linux service
-        run: |
-          SERVICE_NAME="estatemanagementui"
-          # The WorkingDirectory is crucial for .NET apps to find appsettings.json and other files
-          WORKING_DIRECTORY="/opt/txnproc/transactionprocessing/estatemanagementui"
-          DLL_NAME="EstateManagementUI.dll" # Your application's DLL
-          SERVICE_DESCRIPTION="Transaction Processing - Estate Management UI"
-  
-          # Create a systemd service file
-          echo "[Unit]" | sudo tee /etc/systemd/system/${SERVICE_NAME}.service
-          echo "Description=${SERVICE_DESCRIPTION}" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "After=network.target" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "[Service]" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          # IMPORTANT: Use 'dotnet' to run your DLL
-          echo "ExecStart=/usr/bin/dotnet ${WORKING_DIRECTORY}/${DLL_NAME}" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "WorkingDirectory=${WORKING_DIRECTORY}" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "Restart=always" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "User=youruser"   # IMPORTANT: Change to a dedicated, less privileged user
-          echo "Group=yourgroup" # IMPORTANT: Change to a dedicated, less privileged group
-          echo "Environment=ASPNETCORE_ENVIRONMENT=Production" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service # Example
-          echo "" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "[Install]" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "WantedBy=multi-user.target" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-  
-          # Reload systemd, enable, and start the service
-          sudo systemctl daemon-reload
-          sudo systemctl enable "$SERVICE_NAME"
-          sudo systemctl start "$SERVICE_NAME"
-          sudo systemctl status "$SERVICE_NAME" --no-pager # For debugging/verification    
+          $serviceName = "Transaction Processing - Estate Management UI"
+          $servicePath = "C:\txnproc\transactionprocessing\estatemanagementui\EstateManagementUI.exe"
+                   
+          New-Service -Name $serviceName -BinaryPathName $servicePath -Description $serviceName -DisplayName $serviceName -StartupType Automatic
+          Start-Service -Name $serviceName  
 
   deployproduction:
-    runs-on: [productionserver,linux]
-    needs: [buildlinux, deploystaging]
+    runs-on: [productionserver, windows]
+    needs: [build, deploystaging]
     environment: production
     name: "Deploy to Production"
     
@@ -154,70 +103,24 @@ jobs:
         uses: actions/download-artifact@v4.1.8
         with:
           name: estatemanagementui
-          path: /tmp/estatemanagementui # Download to a temporary directory
   
-      - name: Remove existing service (if applicable)
+      - name: Remove existing  Windows service
         run: |
-          SERVICE_NAME="estatemanagementui"
-          if systemctl is-active --quiet "$SERVICE_NAME"; then
-            echo "Stopping existing service..."
-            sudo systemctl stop "$SERVICE_NAME"
-          fi
-          if systemctl is-enabled --quiet "$SERVICE_NAME"; then
-            echo "Disabling existing service..."
-            sudo systemctl disable "$SERVICE_NAME"
-          fi
-          if [ -f "/etc/systemd/system/${SERVICE_NAME}.service" ]; then
-            echo "Removing existing service unit file..."
-            sudo rm "/etc/systemd/system/${SERVICE_NAME}.service"
-            sudo systemctl daemon-reload
-          fi
-  
+          $serviceName = "Transaction Processing - Estate Management UI"
+          # Check if the service exists
+          if (Get-Service -Name $serviceName -ErrorAction SilentlyContinue) {
+            Stop-Service -Name $serviceName
+            sc.exe delete $serviceName
+          }
+
       - name: Unzip the files
         run: |
-          sudo mkdir -p /opt/txnproc/transactionprocessing/estatemanagementui
-          sudo unzip -o /tmp/estatemanagementui/estatemanagementui.zip -d /opt/txnproc/transactionprocessing/estatemanagementui
-  
-      # IMPORTANT: Add a step to ensure the .NET runtime is installed on the server
-      # This assumes it's not already there. If your base image already has it, you can skip this.
-      - name: Install .NET Runtime
+          Expand-Archive -Path estatemanagementui.zip -DestinationPath "C:\txnproc\transactionprocessing\estatemanagementui" -Force
+      
+      - name: Install as a Windows service
         run: |
-          # Example for Ubuntu. Adjust based on your .NET version (e.g., 8.0, 7.0)
-          # and if you need the SDK or just the runtime.
-          # This uses Microsoft's package repository for the latest versions.
-          wget https://packages.microsoft.com/config/ubuntu/$(lsb_release -rs)/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
-          sudo dpkg -i packages-microsoft-prod.deb
-          rm packages-microsoft-prod.deb
-          sudo apt update
-          sudo apt install -y aspnetcore-runtime-9.0
-  
-      - name: Install and Start as a Linux service
-        run: |
-          SERVICE_NAME="estatemanagementui"
-          # The WorkingDirectory is crucial for .NET apps to find appsettings.json and other files
-          WORKING_DIRECTORY="/opt/txnproc/transactionprocessing/estatemanagementui"
-          DLL_NAME="EstateManagementUI.dll" # Your application's DLL
-          SERVICE_DESCRIPTION="Transaction Processing - Estate Management UI"
-  
-          # Create a systemd service file
-          echo "[Unit]" | sudo tee /etc/systemd/system/${SERVICE_NAME}.service
-          echo "Description=${SERVICE_DESCRIPTION}" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "After=network.target" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "[Service]" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          # IMPORTANT: Use 'dotnet' to run your DLL
-          echo "ExecStart=/usr/bin/dotnet ${WORKING_DIRECTORY}/${DLL_NAME}" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "WorkingDirectory=${WORKING_DIRECTORY}" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "Restart=always" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "User=youruser"   # IMPORTANT: Change to a dedicated, less privileged user
-          echo "Group=yourgroup" # IMPORTANT: Change to a dedicated, less privileged group
-          echo "Environment=ASPNETCORE_ENVIRONMENT=Production" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service # Example
-          echo "" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "[Install]" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-          echo "WantedBy=multi-user.target" | sudo tee -a /etc/systemd/system/${SERVICE_NAME}.service
-  
-          # Reload systemd, enable, and start the service
-          sudo systemctl daemon-reload
-          sudo systemctl enable "$SERVICE_NAME"
-          sudo systemctl start "$SERVICE_NAME"
-          sudo systemctl status "$SERVICE_NAME" --no-pager # For debugging/verification 
+          $serviceName = "Transaction Processing - Estate Management UI"
+          $servicePath = "C:\txnproc\transactionprocessing\estatemanagementui\EstateManagementUI.exe"
+                   
+          New-Service -Name $serviceName -BinaryPathName $servicePath -Description $serviceName -DisplayName $serviceName -StartupType Automatic
+          Start-Service -Name $serviceName 
