--- a/EstateManagementUI.BlazorServer/Properties/launchSettings.json
+++ b/EstateManagementUI.BlazorServer/Properties/launchSettings.json
@@ -1,20 +1,11 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
     "profiles": {
-      "http": {
-        "commandName": "Project",
-        "dotnetRunMessages": true,
-        "launchBrowser": true,
-        "applicationUrl": "http://localhost:5152",
-        "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
-        }
-      },
       "https": {
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "https://localhost:7154;http://localhost:5152",
+        "applicationUrl": "https://localhost:5004",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
