--- a/EstateManagementUI.BlazorServer/EstateManagementUI.BlazorServer.csproj
+++ b/EstateManagementUI.BlazorServer/EstateManagementUI.BlazorServer.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="15.0.1" />
     <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="IdentityModel" Version="6.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
   </ItemGroup>
 
   <ItemGroup>
