--- a/EstateManagementUI.BlazorServer.Tests.Integration/EstateManagementUI.BlazorServer.Tests.Integration.csproj
+++ b/EstateManagementUI.BlazorServer.Tests.Integration/EstateManagementUI.BlazorServer.Tests.Integration.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Testcontainers" Version="4.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+    <Folder Include="Support\" />
+  </ItemGroup>
+
 </Project>
