--- a/EstateManagmentUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
+++ b/EstateManagmentUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
@@ -11,5 +11,6 @@
 		<PackageReference Include="SecurityService.Client" Version="2025.12.2" />
 		<PackageReference Include="Shared.Results" Version="2025.12.2" />
 		<PackageReference Include="SimpleResults" Version="4.0.0" />
+		<PackageReference Include="TransactionProcessor.Client" Version="2025.12.1" />
 	</ItemGroup>
 </Project>
