Read client credentials from config, not hardcoded
ClientId and ClientSecret are now loaded from appsettings.json and appsettings.Test.json using a configuration reader, improving flexibility and security. ApiClient constructor updated accordingly. Added Shared package dependency. Commented-out credential lines added for reference in test config.

--- a/EstateManagementUI.BlazorServer/appsettings.json
+++ b/EstateManagementUI.BlazorServer/appsettings.json
@@ -14,7 +14,9 @@
     "TransactionProcessorApi": "http://127.0.0.1:5002",
     "EstateReportingApi": "http://127.0.0.1:5011",
     "FileProcessorApi": "http://127.0.0.1:5009",
-    "SecurityService": "https://127.0.0.1:5001"
+    "SecurityService": "https://127.0.0.1:5001",
+    "ClientId": "serviceClient",
+    "ClientSecret": "d192cbc46d834d0da90e8a9d50ded543"
   },
   "Authentication": {
     "Authority": "https://localhost:5001",
