--- a/EstateManagmentUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
+++ b/EstateManagmentUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
@@ -9,6 +9,7 @@
 		<PackageReference Include="ClientProxyBase" Version="2025.12.2" />
 		<PackageReference Include="MediatR" Version="14.0.0" />
 		<PackageReference Include="SecurityService.Client" Version="2025.12.2" />
+		<PackageReference Include="Shared" Version="2025.12.2" />
 		<PackageReference Include="Shared.Results" Version="2025.12.2" />
 		<PackageReference Include="SimpleResults" Version="4.0.0" />
 		<PackageReference Include="TransactionProcessor.Client" Version="2025.12.1" />
